fix: transform animation safari

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -84,7 +84,7 @@
 
                   svg {
                     fill: $color-green;
-                    transform: translateY(-50%) rotateX(180deg);
+                    transform: translateY(-50%) rotate(180deg);
                   }
                 }
               }
