--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2719,8 +2719,9 @@ h4 strong,
 
   .header__content-navigation .content-navigation__links li.submenu:hover svg {
     fill: #2CA58D;
-    -webkit-transform: translateY(-50%) rotateX(180deg);
-            transform: translateY(-50%) rotateX(180deg);
+    -webkit-transform: translateY(-50%) rotate(180deg);
+        -ms-transform: translateY(-50%) rotate(180deg);
+            transform: translateY(-50%) rotate(180deg);
   }
 
   .header__content-cross {
